# NeuroFlow-HiDevs

./: .env.example  .gitignore  .secrets.baseline  README.md  mypy_errors.txt  pyproject.toml  ruff_errors.txt  silence_mypy.py
.github/workflows/: build.yml  ci.yml  quality-gate.yml
backend/: Dockerfile  config.py  list_gemini_models.py  main.py  probe_models.py  requirements.txt  start.sh  test_compare.py  test_evaluation_judge.py  test_finetune.py  test_gemini_live.py  test_generation.py  test_ingestion.py  test_provider.py  worker.py
backend/api/: auth.py  compare.py  evaluations.py  finetune.py  ingest.py  pipelines.py  query.py
backend/db/: health.py  migrations.py  pool.py
backend/jobs/: retention.py
backend/models/: pipeline.py
backend/monitoring/: metrics.py
docs/: api-contracts.md  architecture.md  deployment.md  retrospective.md  runbook.md
documentation/: task-11-implementation-plan.md  task-11-walkthrough.md  task-12-implementation-plan.md  task-12-walkthrough.md  task-13-implementation-plan.md  task-13-walkthrough.md  task-14-walkthrough.md  task-15-walkthrough.md  task-16-walkthrough.md
evaluation/: calibration_results.json  generation_eval.py  improvement_log.md  judge.py  quality_baseline.json  quality_final.json  retrieval_eval.py  retrieval_results.json  run_calibration.py
frontend/: Dockerfile  package-lock.json  package.json
infra/: .env  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml
sdk/: README.md  pyproject.toml
sdk/examples/: quickstart.py
sdk/neuroflow/: __init__.py  client.py  models.py
(+85 files in other folders)
