[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "neuroflow-sdk"
version = "0.1.0"
description = "Python SDK for the NeuroFlow API"
authors = [
    { name = "NeuroFlow Team", email = "engineering@neuroflow.ai" }
]
dependencies = [
    "httpx>=0.24.0",
    "pydantic>=2.0.0"
]
